--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,5 +1,10 @@
 <template>
-<div class="page page-homepage light" data-name="homepage">
+    <div class="page">
+<div class="page page-homepage light ptr-content " data-name="homepage" data-ptr-distance="55" data-ptr-mousewheel="true">
+    <div class="ptr-preloader">
+        <div class="preloader"></div>
+        <div class="ptr-arrow"></div>
+      </div>
 
     <div class="toolbar tabbar toolbar-bottom o-visible">
         <div class="toolbar-inner o-visible tabs-max-width">
@@ -698,6 +703,7 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 </template>
 <script>
