--- a/public/pages/absen/clockin.html
+++ b/public/pages/absen/clockin.html
@@ -1,5 +1,6 @@
 <template>
-    <div class="page light page-content" style="overflow-x: hidden;">
+    <div class="page">
+    <div class="page light page-content ptr-content" style="overflow-x: hidden;">
         <div class="appbar bg-template">
             <div class="appbar-inner">
                 <div class="left">
@@ -10,6 +11,10 @@
                 </div>
             </div>
         </div>
+        <div class="ptr-preloader">
+            <div class="preloader"></div>
+            <div class="ptr-arrow"></div>
+          </div>
     
         <div class="block mt-0 mb-0 px-0 text-align-center" style="height: 370px;">
                 <div class="row" style="height: 100%;">
@@ -82,6 +87,7 @@
             </div>
         </div>
     </div>
+</div>
     </template>
     
     <script>
