--- a/public/pages/coba.html
+++ b/public/pages/coba.html
@@ -1,6 +1,6 @@
 <template>
     <div class="page">
-    <div class="page-content ptr-content ">
+    <div class="page-content ptr-content" data-ptr-distance="55" data-ptr-mousewheel="true">
   <div class="ptr-preloader">
     <div class="preloader"></div>
     <div class="ptr-arrow"></div>
@@ -39,9 +39,3 @@
 </div>
 </div>
 </template>
-
-<script>
-</script>
-
-<script src="../js/app.js">
-</script>
