--- a/public/pages/absen/clockin.html
+++ b/public/pages/absen/clockin.html
@@ -1,6 +1,6 @@
 <template>
     <div class="page">
-    <div class="page light page-content ptr-content" style="overflow-x: hidden;">
+    <div class="page light page-content ptr-content" id="back" style="overflow-x: hidden;">
         <div class="appbar bg-template">
             <div class="appbar-inner">
                 <div class="left">
@@ -86,6 +86,18 @@
                 <i class="fas fa-fingerprint" style="font-size: 30px;"></i>
             </div>
         </div>
+        <script>
+            var self = this;
+            var app = self.$app;
+            var $ = self.$;
+            var key = false;
+
+            function k() {
+                console.log('run');
+                var back = document.getElementById("back");
+                back.click();
+            }
+        </script>
     </div>
 </div>
     </template>
