--- a/public/pages/absen/clockin.html
+++ b/public/pages/absen/clockin.html
@@ -1,10 +1,10 @@
 <template>
     <div class="page">
-    <div class="page light page-content ptr-content" id="back" style="overflow-x: hidden;">
+    <div class="page light page-content ptr-content" style="overflow-x: hidden;">
         <div class="appbar bg-template">
             <div class="appbar-inner">
                 <div class="left">
-                    <a href="" class="link back icon-only">
+                    <a href="" id="back" class="link back icon-only">
                         <i class="material-icons" style="color: #fff;font-size: 30px;">keyboard_arrow_left</i>
                         <span class="mx-2" style="color: #fff;font-size: 18px;">Check In</span>
                     </a>
