--- a/public/pages/coba.html
+++ b/public/pages/coba.html
@@ -1,6 +1,6 @@
 <template>
     <div class="page">
-    <div class="page-content ptr-content" data-ptr-distance="55" data-ptr-mousewheel="true">
+    <div class="page-content ptr-content">
   <div class="ptr-preloader">
     <div class="preloader"></div>
     <div class="ptr-arrow"></div>
