--- a/public/pages/school-home.html
+++ b/public/pages/school-home.html
@@ -85,7 +85,7 @@
                 </div>
             </div>
         </div>
-        <div class="page-content ptr-content" data-ptr-mousewheel="true" @ptr:refresh="loadMore">
+        <div class="page-content ptr-content" data-ptr-mousewheel="true" @ptr:refresh="ptr">
             
             <div class="ptr-preloader">
                 <div class="preloader"></div>
@@ -786,7 +786,7 @@
             }
         },
         methods:{
-            loadMore: function (e, done) {
+            ptr: function (e, done) {
                 var self = this;
                 var $ = self.$$;
 
