--- a/public/pages/school-home.html
+++ b/public/pages/school-home.html
@@ -69,9 +69,8 @@
         <div class="navbar">
             <div class="navbar-inner">
                 <div class="left">
-                    <a href="#" class="link icon-only panel-open" data-panel="left">
-                        <span class="new-notification"></span>
-                        <i class="icon material-icons">menu</i>
+                    <a href="#" class="link icon-only back">
+                        <i class="icon material-icons">navigate_before</i>
                     </a>
                 </div>
                 <div class="title"><img src="img/logo-header.png" alt="" class="header-logo"> </div>
