--- a/public/pages/school-home.html
+++ b/public/pages/school-home.html
@@ -791,7 +791,7 @@
 
                 setTimeout(function() {
                 self.$setState({ loading: false });
-                }, 4000);
+                }, 4000);//setelah refresh selesai
 
                 setTimeout(function () {
                     self.$setState({
